
2011-07-26  Carsten Haitzler (The Rasterman)

        * Fix timer precision handling for grouping timer ticks so
        they actually do tick off together

2011-07-28  Cedric Bail

	* Add ecore_main_loop_thread_safe_call_async.

2011-07-26  Carsten Haitzler (The Rasterman)

        * Make ecore-evas give more errors on stderr when engines are
        not found.

2011-08-16  Cedric Bail

	* Add ecore_main_loop_thread_safe_call_sync.

2011-08-17  Cedric Bail

	* Add ecore_thread_main_loop_begin and ecore_thread_main_loop_end.
	Usefull to protect EFL call from another thread.

2011-09-12  Mike Blumenkrantz

        * Add ecore_con_server_fd_get, ecore_con_client_fd_get for manipulating
          server file descriptors.

2011-09-13  Mike Blumenkrantz

        * Add ECORE_CON_EVENT_CLIENT_WRITE, ECORE_CON_EVENT_SERVER_WRITE for
          obtaining progress of socket writes

2011-09-18  Carsten Haitzler (The Rasterman)

        * Fix bug in Ecore_X generic event handling for extended event
          sizes when freeing (and allocating) the data.

2011-09-29  Youness Alaoui (KaKaRoTo)

        * Port ecore-con to work on systems without IPv6 support
        * Use inet_ntop instead of getnameinfo for ecore_con_client_get_ip
        * Added ecore-con unit test

2011-10-28  Jiyoun Park

        * Fix bug in Ecore_X using geometry value instead of
          recently requested geometry value

2011-10-28 Rafael Antognolli

        * Make the framebuffer engine input use ecore_input_evas instead
        of feeding evas input events directly.

2011-11-02 Nicolas Aguirre

	* Add support ecore_cocoa_evas engine.
	* Fix ecore_cocoa code to correctly handle cocoa window.

2011-11-02 Bluezery

	* Fix return error handling in ecore_file_download when
        ecore_con_url_get() fails.

2011-11-20 Vincent Torri

	* Ecore_Win32, Ecore_WinCE: fix Shift, Control and Alt keys
	detection
	* Ecore_Win32: fix "mouse-down inside and mouse-up outside" issue